--- a/views/product/index.hbs
+++ b/views/product/index.hbs
@@ -91,9 +91,11 @@
                                             <td v-text="item.dateupdate"></td>
                                             <td v-text="item.userupdate"></td>
                                             <td class="action-ms">
-                                                <span><i class="fa fa-trash" aria-hidden="true"></i></span> |
+                                                <span @click="binProduct(item._id, item.name, item.bin)"><i class="fa fa-trash" aria-hidden="true"></i></span> |
                                                 <span><i class="fa fa-eye" aria-hidden="true"></i></span> |
-                                                <span><i class="fas fa-edit"></i></span>
+                                                <span><i class="fas fa-edit"></i></span> |
+                                                <span><i class="fas fa-bell"></i></span> |
+                                                <span><i class="fas fa-comment"></i></span>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -127,9 +129,11 @@
                                             <td v-text="item.dateupdate"></td>
                                             <td v-text="item.userupdate"></td>
                                             <td class="action-ms">
-                                                <span><i class="fa fa-trash" aria-hidden="true"></i></span> |
+                                                <span @click="binProduct(item._id, item.name, item.bin)"><i class="fa fa-trash" aria-hidden="true"></i></span> |
                                                 <span><i class="fa fa-eye" aria-hidden="true"></i></span> |
-                                                <span><i class="fas fa-edit"></i></span>
+                                                <span><i class="fas fa-edit"></i></span> |
+                                                <span><i class="fas fa-bell-slash"></i></span> |
+                                                <span><i class="fas fa-cog"></i></span> 
                                             </td>
                                         </tr>
                                     </tbody>
@@ -163,7 +167,7 @@
                                             <td v-text="item.dateupdate"></td>
                                             <td v-text="item.userupdate"></td>
                                             <td class="action-ms">
-                                                <span><i class="fa fa-trash" aria-hidden="true"></i></span> |
+                                                <span @click="binProduct(item._id, item.name, item.bin)"><i class="fa fa-trash" aria-hidden="true"></i></span> |
                                                 <span><i class="fa fa-eye" aria-hidden="true"></i></span> |
                                                 <span><i class="fas fa-edit"></i></span>
                                             </td>
@@ -199,9 +203,9 @@
                                             <td v-text="item.dateupdate"></td>
                                             <td v-text="item.userupdate"></td>
                                             <td class="action-ms">
-                                                <span><i class="fa fa-trash" aria-hidden="true"></i></span> |
+                                                <span @click="binProduct(item._id, item.name, item.bin)"><i class="fa fa-retweet" aria-hidden="true"></i></span> |
                                                 <span><i class="fa fa-eye" aria-hidden="true"></i></span> |
-                                                <span><i class="fas fa-edit"></i></span>
+                                                <span><i class="fas fa-trash"></i></span>
                                             </td>
                                         </tr>
                                     </tbody>
